# droid-mcp

./: Cargo.toml  README.md  policy.toml  tools.toml
src/: builtins.rs  main.rs  manifest.rs  mcp.rs  policy.rs  server.rs  tools.rs  transport_sse.rs  transport_stdio.rs
